--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "start": "npm install & nodemon server.ts",
-    "test": "test"
+    "test": "test",
+    "build": "tsc --project ./"
   },
   "repository": {
     "type": "git",
@@ -18,12 +19,23 @@
   },
   "homepage": "https://github.com/alexw1983/wilsons-identity-server#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^6.6.2",
+    "@google-cloud/firestore": "^4.15.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^16.11.7",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.5.4",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0"
   }
 }
