--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "fernet": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "typescript": "^4.5.4",
     "uuidv4": "^6.2.12"
